修改过时方法